# inf515-cg2-ws24

./: .gitignore  CMakeLists.txt  install-deps.sh
task01-window/: CMakeLists.txt  window.cc
task02-clear_color/: CMakeLists.txt  clear_color.cc
task03-triangles/: CMakeLists.txt  triangles.cc  triangles.md
task04-two_shaders/: CMakeLists.txt  two_shaders.cc  two_shaders.md
task05-shader_class/: CMakeLists.txt  example.cc  shader.cc
task06-uniform/: CMakeLists.txt  fragment_shader.fs  shader.cc  shader.hh  uniform.cc  vertex_shader.vs
task07-procedural/: CMakeLists.txt  fragment_shader.fs
task08-animation/: CMakeLists.txt  fragment_shader.fs
task09-uv_coordinates/: CMakeLists.txt  fragment_shader.fs  uv_coords.cc  vertex_shader.vs
task10-mipmaps/: CMakeLists.txt  fragment_shader.fs  mipmaps.cc  vertex_shader.vs
task11-glm/: CMakeLists.txt  glm.cc
task12-transform/: CMakeLists.txt  transformation.cc  vertex_shader.vs
